--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
+*.zip filter=lfs diff=lfs merge=lfs -text
+*.nt filter=lfs diff=lfs merge=lfs -text
 info/visitkorea.nt filter=lfs diff=lfs merge=lfs -text
 info/visitkorea_clean.nt filter=lfs diff=lfs merge=lfs -text
 test.zip filter=lfs diff=lfs merge=lfs -text
