--- a/Projects/prj03home/requirements.txt
+++ b/Projects/prj03home/requirements.txt
@@ -1,3 +1,4 @@
+requests==2.31.0
 Django==5.0.2
 Pillow==10.2.0
 python-dotenv==1.0.1
@@ -11,4 +12,11 @@ django-storages==1.14.2
 boto3==1.34.34
 psycopg2-binary==2.9.9
 gunicorn==21.2.0
-whitenoise==6.6.0 
+whitenoise==6.6.0
+pandas==2.2.0
+numpy==1.26.3
+matplotlib==3.8.2
+seaborn==0.13.1
+scikit-learn==1.4.0
+jupyter==1.0.0
+ipython==8.21.0 
