--- a/Projects/prj03home/requirements.txt
+++ b/Projects/prj03home/requirements.txt
@@ -11,4 +11,10 @@ django-storages==1.14.2
 boto3==1.34.34
 psycopg2-binary==2.9.9
 gunicorn==21.2.0
-whitenoise==6.6.0 
+whitenoise==6.6.0
+torch>=1.7.0
+torchvision>=0.8.0
+numpy>=1.19.0
+opencv-python>=4.4.0
+Pillow>=8.0.0
+basicsr>=1.4.2 
